# VecGrep

./: CHANGELOG.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/workflows/: ci.yml
src/vecgrep/: chunker.py  embedder.py  migrate.py  server.py  store.py
tests/: conftest.py  test_chunker.py  test_chunker_ast.py  test_embedder.py  test_migrate.py  test_providers.py  test_server.py  test_store.py
