[project]
name = "vecgrep"
version = "1.0.0"
description = "Cursor-style vector search MCP plugin for Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "iamvirul" }]
keywords = ["mcp", "semantic-search", "embeddings", "claude", "code-search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp[cli]>=1.0,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "tree-sitter-languages>=1.10,<2.0",
    "numpy>=1.26",
    "lancedb>=0.6,<1.0",
    "pyarrow>=14.0",
    "watchdog>=4.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/iamvirul/VecGrep"
Repository = "https://github.com/iamvirul/VecGrep"
Issues = "https://github.com/iamvirul/VecGrep/issues"

[project.scripts]
vecgrep = "vecgrep.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vecgrep"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "basic"
